feat:add interface student query all undo tasks
