# web/behavior.go
@@ -14,5 +14,6 @@ func RegisterBehaviorRoute(r *gin.RouterGroup, bc behavior.BehaviorController, a
 		c.POST("/record", ginx.WrapReqAndClaim(bc.RecordAction))
 		c.POST("/update-progress", ginx.WrapReqAndClaim(bc.UpdateVideoProgress))
 		c.GET("/class-progress/:class_id/:status", ginx.WrapUriAndClaim(bc.GetClassVideoProgress))
+		c.GET("/my/unfinished", ginx.WrapClaim(bc.GetMyUnfinishedTasks))
 	}
 }
